--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,6 @@
-{{define "New"}}
+{{define "Edit"}}
+
+
 
 {{template "_head"}}
 
@@ -9,8 +11,8 @@
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-5">Novo produto</h1>
-                <p class="lead">Insira os detalhes</p>
+                <h1 class="display-5">Editando produto</h1>
+                <p class="lead">Insira os dados para atualizar</p>
             </div>
         </div>
         <form method="POST" action="insert">
@@ -47,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" value="salvar" class="btn btn-success">Salvar</button>
+            <button type="submit" value="salvar" class="btn btn-success">Atualizar</button>
             <a class="btn btn-info" href="/">Voltar</a>
         </form>
     </body>
