--- a/templates/edit.html
+++ b/templates/edit.html
@@ -15,12 +15,13 @@
                 <p class="lead">Insira os dados para atualizar</p>
             </div>
         </div>
-        <form method="POST" action="insert">
+        <form method="POST" action="update">
+            <input type="hidden" name="id" value="{{.Id}}">
             <div class="row">
                 <div class="col-sm-8">
                     <div class="form-group">
                         <label for="nome">Nome:</label>
-                        <input type="text" name="nome" class="form-control">
+                        <input type="text" name="nome" class="form-control" value="{{.Nome}}">
                     </div>
                 </div>
             </div>
@@ -28,7 +29,7 @@
                 <div class="col-sm-8">
                     <div class="form-group">
                         <label for="descricao">Descrição:</label>
-                        <input type="text" name="descricao" class="form-control">
+                        <input type="text" name="descricao" class="form-control" value="{{.Descricao}}">
                     </div>
                 </div>
             </div>
@@ -36,7 +37,7 @@
                 <div class="col-sm-2">
                     <div class="form-group">
                         <label for="preco">Preço:</label>
-                        <input type="number" name="preco" class="form-control" step="0.01">
+                        <input type="number" name="preco" class="form-control" step="0.01" value="{{.Preco}}">
                     </div>
                 </div>
             </div>
@@ -45,7 +46,7 @@
                 <div class="col-sm-2">
                     <div class="form-group">
                         <label for="quantidade">Quantidade:</label>
-                        <input type="number" name="quantidade" class="form-control">
+                        <input type="number" name="quantidade" class="form-control" value="{{.Quantidade}}">
                     </div>
                 </div>
             </div>
